[package]
name = "dora-rerun"
version.workspace = true
edition.workspace = true

[dependencies]
dora-node-api = { workspace = true }
eyre = "0.6.8"
tokio = { version = "1.24.2", features = ["rt"] }
rerun = { version = "0.24.0", features = ["web_viewer", "image"] }
ndarray = "0.15.6"
k = "0.32"

bytemuck = "1.20.0"
rand = "0.9.1"
pinyin = "0.10.0"


[lib]
name = "dora_rerun"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
