[package]
name = "translater"
version.workspace = true
edition.workspace = true

[dependencies]
dora-node-api ={ workspace = true }  # Dora の Rust ノード API
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
dotenv.workspace = true
tokio.workspace = true

types ={ path = "../types" }

rand = "0.9.2"
